# wmcv-tech

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: auto-clang-format.yml  ci.yml
scripts/cmake/: compilerwarnings.cmake  googletest.cmake  precompiled.cmake  sanitizers.cmake  staticanalysis.cmake  tracy.cmake
src/: CMakeLists.txt  main.cpp
src/wmcv_foundation/: CMakeLists.txt
src/wmcv_foundation/include/: wmcv_foundation_pch.h
src/wmcv_foundation/include/foundation/: wmcv_types.h  wmcv_utility.h
src/wmcv_foundation/include/foundation/memory/: wmcv_allocator.h  wmcv_allocator_linear.h  wmcv_allocator_linear_concurrent.h  wmcv_allocator_system.h
src/wmcv_foundation/src/: wmcv_foundation_pch.cpp
src/wmcv_foundation/src/memory/: wmcv_allocator.cpp  wmcv_allocator_linear.cpp  wmcv_allocator_linear_concurrent.cpp  wmcv_allocator_system_nix.cpp  wmcv_allocator_system_win32.cpp
test/: CMakeLists.txt  test_main.cpp  wmcv_test_pch.cpp  wmcv_test_pch.h
test/memory/: test_allocator.cpp  test_allocator_mock.h  test_linear_allocator.cpp  test_system_allocator.cpp  test_utility.cpp
